# redguard-preservation

./: .gitignore  AGENTS.md  ANALYSIS_UNITY_GLB_EXPORT.md  BELLTOWR.ROB  CARTOGR.ROB  CARTOGR.glb  CARTOGR.glb.report.json  Cargo.toml  LHBM4.3DC  LHBM4.glb  LHBM4.glb.report.json  MPOB_RUNTIME_ANALYSIS.md  README.md  UNITY_GLB_CODE_SNIPPETS.md  cliff.toml  renovate.json
.cursor/rules/: rules.mdc
.devcontainer/: devcontainer.json
.github/workflows/: bump-version.yml  docs-pages.yml  publish.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/code-hygiene/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: code-hygiene.md
docs/: 3DC.md  README.md  ROB.md  SUMMARY.md  book.toml
docs/config/: README.md  combat-ini.md  fog-ini.md  item-ini.md  keys-ini.md  menu-ini.md  registry-ini.md  surface-ini.md  system-ini.md  world-ini.md
docs/engine/: README.md  SOUP.md  SOUPDEF.md  attachment.md  cheats.md  sky.md  water.md
docs/formats/: CHT.md  COL.md  FNT.md  GXA.md  README.md  RGM.md  ROB.md  RTX.md  SFX.md  TEXBSI.md  WLD.md
docs/formats/models/: 3d.md  3dc.md
docs/formats/pvo/: format.md  parser.md
docs/theme/: index.hbs  redguard.css
input/: BELLTOWR.glb  BELLTOWR_glide.ROB  BELLTOWR_glide.glb  CARTOGR.glb  CYRSA001_glide.3DC  ISLAND.ROB  MENU.ROB
src/: converter.rs  error.rs  geometry.rs  lib.rs  main.rs  model3d.rs  opts.rs  parser.rs  rob.rs
src/cli/: filetype.rs  mod.rs  read.rs  scan.rs  utils.rs
src/cli/convert/: cht.rs  col.rs  fnt.rs  gxa.rs  mod.rs  pvo.rs  rtx.rs  sfx.rs  texbsi.rs  wld.rs
src/ffi/: README.md  buffer.rs  mod.rs  rgpre.h  scene.rs  todo.md  types.rs  world.rs
src/gltf/: builder.rs  mod.rs  primitives.rs  terrain.rs  texture_cache.rs
src/import/: bsi.rs  cht.rs  fnt.rs  fnt_export.rs  fnt_ttf.rs  gxa.rs  mod.rs  palette.rs  palette_export.rs  png.rs  pvo.rs  registry.rs  rtx.rs  sfx.rs  soup_def.rs  wld.rs  world_ini.rs
src/import/model3d/: mod.rs  parser.rs
src/import/rgm/: metadata.rs  mod.rs  parser.rs  positioning.rs  script.rs  shared.rs  tests.rs
src/import/rob/: mod.rs  parser.rs
tests/: input_fixtures_integration.rs
tests/fixtures/: font.fnt  model_v26.3d  model_v40.3dc  palette.col  scene.rgm  scene.rob  texture.bsi  world.pvo  world.wld
