[package]
name = "redguard-preservation"
version = "0.5.4"
edition = "2024"
authors = ["Michael Lohr <michael@lohr.dev>"]
description = "A CLI tool to preserve Redguard files"
readme = "README.md"
repository = "https://github.com/michidk/redguard-preservation"
documentation = "https://github.com/michidk/redguard-preservation"
homepage = "https://github.com/michidk/redguard-preservation"
license = "MIT"
keywords = ["redguard", "preservation", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "rgpre"
path = "src/main.rs"

[lib]
name = "rgpre"
crate-type = ["lib", "cdylib"]

[dependencies]
color-eyre = "0.6.5"
clap = { version = "4.6.0", features = ["derive", "color", "help", "usage", "suggestions", "wrap_help", "env"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.9"
gltf = "1.0"
gltf-json = { version = "1.4.1", features = ["KHR_lights_punctual", "names"] }
log = "0.4.29"
nom = "8.0.0"
serde_json = "1.0"
image = { version = "0.25.8", default-features = false, features = ["png", "gif"] }
bitmap2ttf = "0.1.1"
thiserror = "2.0.18"
walkdir = "2.5.0"
hound = "3.5"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"
rayon = "1.10"
delharc = { version = "0.6", default-features = false, features = ["std", "lh1"] }

[dev-dependencies]
ttf-parser = "0.25"
